Add all the cheat sheets to the cool things module.

--- a/public/modules/cool-things/views/cool-things.client.view.html
+++ b/public/modules/cool-things/views/cool-things.client.view.html
@@ -21,6 +21,7 @@
                 <li><a  target="_blank" href="https://www.udacity.com/course/cs101">Stanford Intro to CS</a></li>
                 <li><a  target="_blank" href="https://coderdojo.com/">Code Dojo</a></li>
                 <li><a  target="_blank" href="http://nodeschool.io/">Node School</a></li>
+		<li><a  target="_blank" href="http://overapi.com"><h4>All the cheat sheets</h4></li>
             </ul>
 		</div>
 		<div class="col-sm-6 col-md-3">
