Add calendar invite mention to top of calendar.

--- a/public/modules/resume/views/calendar.client.view.html
+++ b/public/modules/resume/views/calendar.client.view.html
@@ -1,6 +1,7 @@
 <section data-ng-controller="CalendarController">
 	<div class="row text-center">
 		<h1>Need Kyle? <small class="text-capitalize">The calendar knows all :)</small></h1>
+		<h5 class="text-capitalize">To make an appointment, open your calendar of choice and send me a meeting invite :) <small><a target="_blank" href="https://www.google.com/search?client=ubuntu&channel=fs&q=How+to+send+a+calendar+invite&ie=utf-8&oe=utf-8#safe=off&channel=fs&q=How+to+send+a+calendar+invite">How do I do that?</a></small></h5>
 		<span>This calendar is on Pacific Time (UTC-08:00), Los Angeles time.</span>
 		<hr>
 	</div>
