--- a/public/modules/cool-things/views/cool-things.client.view.html
+++ b/public/modules/cool-things/views/cool-things.client.view.html
@@ -4,6 +4,8 @@
   </div>
   <div class="row">
     <div class="col-sm-6 col-md-3">
+
+      <!-- FROM KYLE -->
       <h4>From Kyle</h4>
       <hr>
       <ul>
@@ -11,6 +13,8 @@
       </ul>
     </div>
     <div class="col-sm-6 col-md-3">
+
+      <!-- CODE -->
       <h4>Coding</h4><hr>
       <ul class="list-flat">
         <li><a  target="_blank" href="https://www.codeschool.com/">Code School</a></li>
@@ -25,6 +29,8 @@
       </ul>
     </div>
     <div class="col-sm-6 col-md-3">
+
+      <!-- COOL THINGS -->
       <h4>Cool Things</h4><hr>
       <ul class="list-flat">
         <li><a href="http://www.ndpsoftware.com/git-cheatsheet.html#loc=remote_repo;">Best Git Cheatsheet</a></li>
@@ -39,6 +45,8 @@
       </ul>
     </div>
     <div class="col-sm-6 col-md-3">
+
+      <!-- WESTERN WASHINGTON UNIVERISTY-->
       <h4>Western</h4><hr>
       <ul class="list-flat">
         <li><a  target="_blank" href="https://cse.wwu.edu/computer-science">WWU Computer Science</a></li>
@@ -51,6 +59,8 @@
   </div>
   <div class="row">
     <div class="col-sm-6 col-md-3">
+
+      <!-- PROGRAMMING LANGUAGES -->
       <h4>Programming Languages</h4><hr>
       <ul class="list-flat">
 	<li><a target="_blank" href="http://doc.rust-lang.org/">Rust</a></li>
