Add latex editor to cool things module.

--- a/public/modules/cool-things/views/cool-things.client.view.html
+++ b/public/modules/cool-things/views/cool-things.client.view.html
@@ -33,6 +33,7 @@
       <!-- COOL THINGS -->
       <h4>Cool Things</h4><hr>
       <ul class="list-flat">
+	<li><a href="https://www.sharelatex.com/">Online Collaborative LaTeX Editor</a></li>
         <li><a href="http://www.ndpsoftware.com/git-cheatsheet.html#loc=remote_repo;">Best Git Cheatsheet</a></li>
         <li><a  target="_blank" href="http://www.synapse.com/wall-of-cool">All the Cool Things Are Here</a></li>
         <li><a  target="_blank" href="http://xamarin.com/">Xamarin</a></li>
