--- a/public/modules/machine-learning/views/ml.client.view.html
+++ b/public/modules/machine-learning/views/ml.client.view.html
@@ -1,11 +1,17 @@
 <section data-ng-controller="MlController">
 	<div class="row">
-
 		<div class="col-xs-12">
-			<h4>Here are some things from CSCI 571 - machine Learning (Spring 2015)</h4>
+			<h2>Here are some things from CSCI 571 - machine Learning (Spring 2015)</h2>
 			<hr>
+		</div>
+	</div>
 
-			
+	<div class="row">
+		<div class="col-xs-6">
+			<h4><strong>Step 1.</strong> Enter your <strong>raw data</strong> here:</h4>
+		</div>
+		<div class="col-xs-6">
+			<h4><strong>Step 2.</strong> Enter your <strong>clustering data</strong> here:</h4>
 		</div>
 	</div>
 </section>
