--- a/public/lib/bootstrap/less/type.less
+++ b/public/lib/bootstrap/less/type.less
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6,
   font-weight: @headings-font-weight;
   line-height: @headings-line-height;
   color: @headings-color;
-  text-transform: uppercase;
+
   small,
   .small {
     font-weight: normal;
@@ -42,11 +42,6 @@ h6, .h6 {
   .small {
     font-size: 75%;
   }
-}
-
-h5, .h5,
-h6, .h6 {
-  font-weight: @headings-font-bold-weight;
 }
 
 h1, .h1 { font-size: @font-size-h1; }
@@ -178,10 +173,6 @@ ol {
   list-style: none;
 }
 
-.list-square {
-  list-style-type: square;
-}
-
 // Inline turns list items into inline-block
 .list-inline {
   .list-unstyled();
@@ -247,7 +238,7 @@ abbr[data-original-title] {
 }
 .initialism {
   font-size: 90%;
-  text-transform: uppercase;
+  .text-uppercase();
 }
 
 // Blockquotes
