--- a/public/less/global-styles.less
+++ b/public/less/global-styles.less
@@ -5,14 +5,12 @@ h1.super-big {
 }
 
 .loading-animation {
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
-		padding-top: 30px;
     .bullet {
-        position: fixed;
+        position: absolute;
         padding: 15px;
-				margin: 20px;
         border-radius: 50%;
         background: #3E7BE8;
         opacity: 0;
