HOLY SHIT IT WORKS! After 8 hours... figured out the right configuration to get nvd3 directives to work.  Loading module in main angularJS app config.

--- a/public/modules/machine-learning/views/ml.client.view.html
+++ b/public/modules/machine-learning/views/ml.client.view.html
@@ -1,4 +1,14 @@
 <section data-ng-controller="MlController">
+
+	<nvd3-line-chart
+        data="exampleData"
+        showXAxis="true"
+        showYAxis="true"
+        tooltips="true"
+        interactive="true">
+    </nvd3-line-chart>
+
+
 	<div class="row">
 		<div class="col-xs-12">
 			<h2>Here are some things from CSCI 571 - machine Learning (Spring 2015)</h2>
