--- a/public/modules/machine-learning/less/ml.less
+++ b/public/modules/machine-learning/less/ml.less
@@ -4,4 +4,10 @@ section[data-ng-controller="MlController"] {
     width: 100%;
     padding: 5px;
   }
+
+  #chart {
+    margin: 20px 0px;
+    width: 100%;
+    height: 840px;
+  }
 }
