--- a/public/modules/machine-learning/views/ml.client.view.html
+++ b/public/modules/machine-learning/views/ml.client.view.html
@@ -1,14 +1,5 @@
 <section data-ng-controller="MlController">
 
-	<nvd3-line-chart
-        data="exampleData"
-        showXAxis="true"
-        showYAxis="true"
-        tooltips="true"
-        interactive="true">
-    </nvd3-line-chart>
-
-
 	<div class="row">
 		<div class="col-xs-12">
 			<h2>Here are some things from CSCI 571 - machine Learning (Spring 2015)</h2>
@@ -40,8 +31,8 @@
 		</div>
 		<div class="col-sm-6 col-md-6">
 			<h4><strong>Step 2.</strong> Enter your <strong>clustering data</strong> here:</h4>
-			0  1  0  0  0  0  0  0  0  1  1  1  1  1  1  1  1  <br>
-			0  1  0  0  0  0  0  0  0  1  1  1  1  1  1  1  1  <br>
+			0  1  0  1  0  0  1  1  0  1  1  1  1  1  1  1  1  <br>
+			0  1  0  0  0  0  1  1  0  1  1  1  1  1  1  1  1  <br>
 			0  1  0  0  0  0  0  0  0  1  1  1  1  1  1  1  1
 			<textarea name="clusterInput" ng-model="clusterData" autocomplete="on" placeholder="Cluster data set here..." rows=5></textarea>
 		</div>
@@ -77,7 +68,7 @@
 
 	<div class="row">
 		<div class="col-xs-12">
-			<div id="chart_div"></div>
+			<div id="chart"><svg></svg></div>
 		</div>
 	</div>
 
