--- a/public/modules/machine-learning/views/ml.client.view.html
+++ b/public/modules/machine-learning/views/ml.client.view.html
@@ -2,7 +2,7 @@
 
 	<div class="row">
 		<div class="col-xs-12">
-			<h2>Here are some things from CSCI 571 - machine Learning (Spring 2015)</h2>
+			<h2>CSCI 571 - Machine Learning - Clustering Visualization Tool (CVT)</h2>
 			<hr>
 		</div>
 	</div>
@@ -29,10 +29,11 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<h4><strong>Step 3.</strong></h4>
-			<button id="build-btn" class="btn btn-lg btn-info" ng-click="buildData()" ng-hide="dataSets !== undefined">Build Data!</button>
+			<button id="build-btn" class="btn btn-lg btn-info" ng-click="buildData()" ng-hide="dataSets !== undefined">Build Pretty Graph!</button>
 			<button id="prev-btn" class="btn btn-lg btn-default" ng-click="prevCluster()" ng-show="dataSets" ng-disabled="clusterStep < 1">Prev Cluster</button>
 			<panel ng-bind="clusterStep"></panel>
 			<button id="next-btn" class="btn btn-lg btn-default" ng-click="nextCluster()" ng-show="dataSets" ng-disabled="clusterStep >= (dataSets.length - 1)">Next Cluster</button>
+			<h4 ng-show="dataSets !== undefined" class="pull-right">Click the group titles to hide/show that cluster</h4>
 			<hr>
 		</div>
 	</div>
