Add warning message for known bugs.

--- a/public/modules/machine-learning/views/ml.client.view.html
+++ b/public/modules/machine-learning/views/ml.client.view.html
@@ -3,6 +3,7 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<h2>CSCI 571 - Machine Learning - Clustering Visualization Tool (CVT)</h2>
+			<h3>(I have found an error when using cluster id's that are not sequential - working on a fix)</h3>
 			<hr>
 		</div>
 	</div>
